# cerve

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-and-release.yml  build.yml  release.yml
benchmark/: benchmark.sh
served-dir/: index.html
served-dir/hello/: hut.html
src/: config.h  config.h.in  fs-utils.c  help.c  main.c  serve.c  version.c
src/subcmds/: help.c  serve.c  version.c
src/utils/: common.c  fs.c  http.c  log_macros.h
